--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/FuradOmar/Assignment2-Login-Page" class="image fit"><img src="images/reactlogin.jpg" alt="" /></a>
-									<p>Interactive Login Page Using React and Javascript</p>
+									<p>A React-based login and registration page featuring a clean UI and responsive CSS styling. Includes intuitive email and password fields with built-in validation and error handling. 
+										Perfect for web applications needing modern user authentication.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/FuradOmar/Assignment2-Login-Page" class="button">View Project</a></li>
 									</ul>
